--- a/references.bib
+++ b/references.bib
@@ -853,3 +853,18 @@ PMID: 17989204},
 	author = {Xu, Derong and Chen, Wei and Peng, Wenjun and Zhang, Chao and Xu, Tong and Zhao, Xiangyu and Wu, Xian and Zheng, Yefeng and Wang, Yang and Chen, Enhong},
 	doi = {10.48550/arXiv.2312.17617}
 }
+
+@article{lópez-villarrubia2010,
+	title = {Air pollution and mortality in the Canary Islands: a time-series analysis},
+	author = {{López-Villarrubia}, Elena and Ballester, Ferran and {Iñiguez}, Carmen and Peral, Nieves},
+	year = {2010},
+	month = {02},
+	date = {2010-02-12},
+	journal = {Environmental Health},
+	pages = {8},
+	volume = {9},
+	doi = {10.1186/1476-069X-9-8},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2843667/},
+	note = {PMID: 20152037
+PMCID: PMC2843667}
+}
